--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -31,6 +31,54 @@
       </div>
       <div class="hero-img">
         <p>this is placeholder for image</p>
+      </div>
+    </div>
+    <div class="info section">
+      <div class="info-header">Some random information.</div>
+      <div class="info-cards flex">
+        <div class="info-card">
+          <div class="info-img-wrapper"></div>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="info-card">
+          <div class="info-img-wrapper"></div>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="info-card">
+          <div class="info-img-wrapper"></div>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+        <div class="info-card">
+          <div class="info-img-wrapper"></div>
+          <p class="info-text">
+            this is some subtext under an illustration or image
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="quote section">
+      <p class="quote-text">
+        This is an inspiring quote, or a testimonial form a customer. Maybe it's
+        just filling up space, or maybe people will actually read it. Who knows?
+        All I know is that it looks nice.
+      </p>
+      <p class="quote-author">-Thor, God of Thunder</p>
+    </div>
+    <div class="cta section">
+      <div class="cta-wrapper flex">
+        <div class="cta-text flex">
+          <div class="cta-main">Call to action! It's time!</div>
+          <div class="cta-sub">
+            Sign up for our product by clicking that button right there!
+          </div>
+        </div>
+        <button class="call-to-action btn">sign up</button>
       </div>
     </div>
   </body>
