--- a/index.html
+++ b/index.html
@@ -81,5 +81,6 @@
         <button class="call-to-action btn">sign up</button>
       </div>
     </div>
+    <footer>Copyright © TCdotmake 2022</footer>
   </body>
 </html>
